# hospitalgpt

./: .gitignore  28ea39f3-a07b-457b-b12d-e35c8bd2d1dd.txt  codingExample.py  get_patients_between_ages_and_condition.py  hospital_w_func_teams.py  hospitalgpt.py  hospitalgpt_w_func.py  pyproject.toml  readme.md
.cache/41/: cache.db
coding/: compare_stock_gains.py
